updating transaction controller for refund endpoint and adding docs
